test/Execute/SyntaxErrorTest/dict_literal_missing_colon.typh
let d = {'a' 1}

"""stderr
syntax error: $FILE:1:9
  unknown tokens

    1 |  let d = {'a' 1}
                 ^^^^^^^
"""
